--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Damian Koziol",
   "license": "ISC",
   "devDependencies": {
     "webpack": "^5.79.0",
